Closed
Bug 338603
Opened 19 years ago
Closed 19 years ago
Loading web pages before lists download results in an exception in debug mode
Categories
(Toolkit :: Safe Browsing, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: tony, Assigned: tony)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
|
1.29 KB,
patch
|
darin.moz
:
review+
darin.moz
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
WARNING: NS_RETURN_VAL_IF_FALSE(NS_SUCCEEDED(rv)) failed: file
/mozilla/toolkit/components/url-classifier/src/nsUrlClassifierDBService.c
pp, line 191
The above assertion is unnecessary. We check the return value a few lines later and mask errors (table doesn't exist).
| Assignee | ||
Comment 1•19 years ago
|
||
Attachment #222696 -
Flags: review?(darin)
Attachment #222696 -
Flags: approval-branch-1.8.1?(darin)
Updated•19 years ago
|
Attachment #222696 -
Flags: review?(darin)
Attachment #222696 -
Flags: review+
Attachment #222696 -
Flags: approval-branch-1.8.1?(darin)
Attachment #222696 -
Flags: approval-branch-1.8.1+
Comment 2•19 years ago
|
||
fixed-on-trunk, fixed1.8.1
Updated•11 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•