fixes bug 338603 "Loading web pages before lists download results in an exception in debug mode" patch by tony, r=darin